tests/mm0_mmu/fail/bad-sort1423.mm0
-- bad modifier order
pure free strict provable sort s1423;